# keycloak-fastapi

./: .example.txt  guid.md  messy.rb  pyproject.toml  requirements.txt
app/: hi.md  main.py
app/api/routes/: auth_route.py  public.py  scan_route.py  secure.py  subdomain_route.py  user_route.py
app/auth/: keycloak_verify.py
app/constant/: validation.py
app/core/: config.py  database.py  database_config.py  llm_client.py
app/models/: user_detail_model.py  user_model.py
app/repositories/: sast_repo.py  user_repo.py
app/routes/: auth.py
app/schemas/: auth.py  scan_schema.py  subdomain_schema.py  user_schema.py
app/services/: auth_service.py  auth_services.py  sonarqube_service.py  subdomain_service.py  user_service.py
